# dim

./: Cargo.toml  Dockerfile
.github/: dependabot.yml
.github/workflows/: Dockerfile.ci  docker-dev.yml  docker-image-rust-target-multi.yml  docker.yml  docs.yml  react.yml  rust.yml
dim/: Cargo.toml
dim-auth/: Cargo.toml
dim-auth/src/: lib.rs
dim-core/: Cargo.toml
dim-core/src/: errors.rs  lib.rs  tree.rs
dim-core/src/reactor/: mod.rs
dim-core/src/reactor/handler/: mod.rs
dim-core/src/routes/: settings.rs
dim-core/src/scanner/: daemon.rs  mediafile.rs  mod.rs  movie.rs  tv_show.rs
dim-core/src/scanner/tests/: mediafile.rs
dim-core/src/streaming/: mod.rs
dim-database/: Cargo.toml
dim-database/src/: asset.rs  episode.rs  genre.rs  lib.rs  library.rs  media.rs  mediafile.rs  progress.rs  query_ext.rs  user.rs  utils.rs
dim-events/: Cargo.toml
dim-events/src/: lib.rs
dim-extern-api/: Cargo.toml
dim-extern-api/src/: lib.rs
dim-extern-api/src/tmdb/: cache_control.rs  metadata_provider.rs  mod.rs  raw_client.rs
dim-utils/: Cargo.toml
dim-web/: Cargo.toml  build.rs
dim-web/src/: lib.rs  middleware.rs  tree.rs
dim-web/src/routes/: auth.rs  dashboard.rs  filebrowser.rs  library.rs  media.rs  mediafile.rs  search.rs  settings.rs  statik.rs  stream.rs  tv.rs  user.rs  websocket.rs
dim/src/: main.rs
fix-axum-routes/: search-index.js
fix-axum-routes/dim_auth/: fn.set_key_fallible.html
fix-axum-routes/dim_database/rw_pool/: fn.write_tx.html
fix-axum-routes/dim_database/user/: fn.default_theme.html  struct.UpdateableUser.html
fix-axum-routes/dim_extern_api/tmdb/: index.html
fix-axum-routes/dim_web/middleware/: fn.get_cookie_token_value.html
fix-axum-routes/src/dim_core/: stream_tracking.rs.html
fix-axum-routes/src/dim_database/: genre.rs.html
fix-axum-routes/src/dim_web/: tree.rs.html
fix-tests/dim/: fn.main.html
fix-tests/dim_auth/: enum.AuthError.html  fn.user_cookie_generate.html
fix-tests/dim_core/core/: fn.run_scanners.html
fix-tests/dim_core/scanner/: trait.MediaMatcher.html
fix-tests/dim_core/utils/: index.html
fix-tests/dim_database/user/: enum.Role.html  fn.hash.html  struct.InsertableUser.html
fix-tests/dim_utils/: fn.ffpath.html
fix-tests/src/dim_database/: query_ext.rs.html
master/: help.html  search-index.js  settings.html  src-files.js
master/dim/: fn.main.html  index.html  struct.Args.html
master/dim_auth/: all.html  enum.AuthError.html  fn.generate_key.html  fn.set_key.html  fn.set_key_fallible.html  fn.user_cookie_decode.html  fn.user_cookie_generate.html  index.html
master/dim_core/: all.html  index.html
master/dim_core/core/: index.html  static.METADATA_PATH.html  type.DbConnection.html
master/dim_core/errors/: enum.DimError.html  enum.StreamingErrors.html  index.html  trait.ErrorStatusCode.html
master/dim_core/fetcher/: index.html
master/dim_core/inspect/: index.html
master/dim_core/reactor/: trait.Reactor.html
master/dim_core/routes/: index.html
master/dim_core/scanner/: fn.format_path.html  fn.insert_mediafiles.html  fn.parse_filenames.html  fn.start.html  fn.start_custom.html  struct.WorkUnit.html
master/dim_core/stream_tracking/: enum.ContentType.html  index.html  struct.StreamTracking.html  struct.VirtualManifest.html
master/dim_core/streaming/: constant.AVC1_LEVELS.html  fn.ffcheck.html  fn.get_avc1_tag.html  fn.get_qualities.html  struct.Avc1Level.html  struct.Quality.html  struct.STREAMING_SESSION.html
master/dim_core/utils/: fn.channels_pretty.html  fn.ffpath.html  fn.lang_from_iso639.html  fn.secs_to_pretty.html  fn.ts_to_xml.html
master/dim_database/: fn.generate_key.html  fn.get_conn_memory.html  fn.set_key.html  fn.try_get_conn.html  type.Transaction.html
master/dim_database/asset/: index.html  struct.Asset.html  struct.InsertableAsset.html
master/dim_database/compact_mediafile/: index.html  struct.CompactMediafile.html
master/dim_database/episode/: index.html  struct.InsertableEpisode.html  struct.UpdateEpisode.html
master/dim_database/error/: enum.DatabaseError.html  index.html
master/dim_database/genre/: struct.Genre.html  struct.GenreMedia.html
master/dim_database/media/: struct.InsertableMedia.html  struct.UpdateMedia.html
master/dim_database/mediafile/: index.html  struct.InsertableMediaFile.html  struct.MediaFile.html  struct.UpdateMediaFile.html
master/dim_database/movie/: struct.Movie.html
master/dim_database/progress/: index.html  struct.Progress.html
master/dim_database/query_ext/: index.html  trait.QueryExt.html
master/dim_database/rw_pool/: index.html  struct.SqlitePool.html
master/dim_database/season/: index.html  struct.Season.html  struct.UpdateSeason.html
master/dim_database/tv/: index.html  struct.TVShow.html
master/dim_database/user/: enum.DefaultVideoQuality.html  enum.Role.html  enum.Theme.html  fn.default_false.html  fn.default_theme.html  fn.default_true.html  fn.hash.html  fn.verify.html  index.html  struct.InsertableUser.html  struct.Login.html  struct.Roles.html  struct.UpdateableUser.html  struct.User.html  struct.UserID.html  struct.UserSettings.html  type.Credential.html
master/dim_events/: all.html  enum.PushEventType.html  index.html  struct.Message.html
master/dim_extern_api/: enum.Error.html  enum.MediaSearchType.html  struct.ExternalActor.html  struct.ExternalEpisode.html  struct.ExternalMedia.html  struct.ExternalSeason.html  trait.ExternalQueryIntoShow.html  trait.ExternalQueryShow.html  type.Result.html
master/dim_extern_api/filename/: struct.Anitomy.html  struct.CombinedExtractor.html  struct.Metadata.html  struct.TorrentMetadata.html
master/dim_extern_api/mock/: index.html  struct.MockProvider.html
master/dim_extern_api/tmdb/: enum.TMDBClientRequestError.html  sidebar-items.js  struct.MetadataProviderOf.html  struct.Movies.html  struct.TMDBMetadataProvider.html  struct.TvShows.html
master/dim_utils/: all.html  fn.codec_pretty.html  fn.lang_from_iso639.html  fn.secs_to_pretty.html  index.html
master/dim_web/: all.html  fn.start_webserver.html  index.html
(+352 files in other folders)
