[package]
name = "dim-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
rand = "0.9.2"
aes-gcm = "0.10.3"
base64 = "0.22.1"
thiserror = "2.0.16"
displaydoc = "0.2.5"
