[package]
name = "dim-core"
build = "src/build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
vaapi = ["nightfall/vaapi"]
default = []
bench = []

[dependencies]
# git dependencies
nightfall = { git = "https://github.com/ejortega/nightfall", default-features = false, features = [
    "cuda",
    "ssa_transmux",
] }

# local dependencies
dim-auth = { path = "../dim-auth" }
dim-database = { path = "../dim-database" }
dim-events = { path = "../dim-events" }
dim-extern-api = { path = "../dim-extern-api" }
dim-utils = { path = "../dim-utils" }

async-trait = "0.1.89"
axum = { version = "0.8.4" }
cfg-if = "1.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
dia-i18n = "0.10.0"
displaydoc = "0.2.5"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
http = "1.3.1"
hyper = "1.7.0"
ignore = "0.4.23"
image = "0.25.8"
itertools = "0.14.0"
lazy_static = "1.5.0"
libsqlite3-sys = { version = "0.30.1" }
notify = "8.2.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
percent-encoding = "2.3.2"
rand = { version = "0.9.2", features = ["small_rng"] }
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
    "brotli",
], default-features = false }
rusqlite = { version = "=0.32.1", features = ["hooks"] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "std",
    "rc",
] }
serde_derive = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "json",
] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
xmlwriter = "0.1.0"
xtra = { version = "0.6.0", features = ["tokio", "macros"] }

[target.'cfg(unix)'.dependencies]
nix = "0.30.1"

[target.'cfg(windows)'.dependencies]
zip = "5.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
darwin-libproc = { git = "https://github.com/ejortega/darwin-libproc" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
serial_test = "3.2.0"
tempfile = "3.21.0"

[[bench]]
name = "movie_scanner"
harness = false
