[package]
name = "dim-database"
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dim-auth = { path = "../dim-auth" }

base64 = "0.22.1"
cfg-if = "1.0.3"
displaydoc = "0.2.5"
itertools = "0.14.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.16"
tokio = "1.47.1"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }

[build-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
