[package]
name = "dim-extern-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anitomy = "0.2.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
displaydoc = "0.2.5"
governor = "0.10.1"
rand = { version = "0.9.2", features = ["small_rng"] }
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
    "brotli",
], default-features = false }
retry-block = "1.0.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["sync", "rt"] }
torrent-name-parser = "0.12.1"
tracing = "0.1.41"
