[package]
name = "dim-web"
version = "0.1.0"
edition = "2021"

[features]
# the build script usually will enable this if `yarn` is installed.
# If enabled explicitly, the build script will panic if something went wrong.
embed_ui = []

[dependencies]
dim-database = { path = "../dim-database" }
dim-utils = { path = "../dim-utils" }
dim-events = { path = "../dim-events" }
dim-core = { path = "../dim-core" }

nightfall = { git = "https://github.com/ejortega/nightfall", default-features = false, features = [
    "cuda",
    "ssa_transmux",
] }

axum = { version = "0.8.4", features = ["ws", "http2", "macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
displaydoc = "0.2.3"
dominant_color = "0.4.0"
futures = "0.3.14"
fuzzy-matcher = "0.3.7"
http = "1.3.1"
http-body-util = "0.1.3"
image = "0.25.6"
once_cell = "1.21.3"
percent-encoding = "2.3.2"
rust-embed = "8.7.2"
serde = { version = "^1.0.125", default-features = false, features = [
    "derive",
    "std",
    "rc",
] }
serde_derive = "^1.0.125"
serde_json = "^1.0.64"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.16"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.32"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "json",
] }
uuid = { version = "1.18.0", features = ["v4"] }
hyper = "1.7.0"
tower = { version = "0.5.2", features = ["tokio", "util"] }
dim-extern-api = { version = "0.4.0-dev", path = "../dim-extern-api" }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
