[package]
name = "dim-web"
version = "0.1.0"
edition = "2021"

[features]
# the build script usually will enable this if `yarn` is installed.
# If enabled explicitly, the build script will panic if something went wrong.
embed_ui = []

[dependencies]
dim-core = { path = "../dim-core" }
dim-database = { path = "../dim-database" }
dim-events = { path = "../dim-events" }
dim-extern-api = { path = "../dim-extern-api" }
dim-utils = { path = "../dim-utils" }

nightfall = { git = "https://github.com/ejortega/nightfall", default-features = false, features = [
    "cuda",
    "ssa_transmux",
] }

axum = { version = "0.8.4", features = ["ws", "http2", "macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
cfg-if = "1.0.3"
chrono = { version = "0.4.41", features = ["serde"] }
displaydoc = "0.2.5"
dominant_color = "0.4.0"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
http = "1.3.1"
hyper = "1.7.0"
image = "0.25.8"
once_cell = "1.21.3"
percent-encoding = "2.3.2"
rust-embed = "8.7.2"
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "std",
    "rc",
] }
serde_derive = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tower = { version = "0.5.2", features = ["tokio", "util"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "json",
] }
uuid = { version = "1.18.1", features = ["v4"] }
