[package]
name = "dim"
version = "0.1.0"
edition = "2021"

[dependencies]
dim-core = { path = "../dim-core" }
dim-auth = { path = "../dim-auth" }
dim-database = { path = "../dim-database" }
dim-events = { path = "../dim-events" }
dim-extern-api = { path = "../dim-extern-api" }
dim-web = { path = "../dim-web" }
dim-utils = { path = "../dim-utils" }

# git dependencies
nightfall = { git = "https://github.com/ejortega/nightfall", default-features = false, features = [
    "cuda",
    "ssa_transmux",
] }

clap = { version = "4.5.47", features = ["derive", "env"] }
fdlimit = "0.3.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
xtra = { version = "0.6.0", features = ["tokio", "macros"] }

[features]
vaapi = ["nightfall/vaapi"]

# the build script usually will enable this if `yarn` is installed.
# If enabled explicitly, the build script will panic if something went wrong.
embed_ui = []
